Import of SHARYANTO/Task-Setup-0.03 from CPAN.
gitpan-cpan-distribution: Task-Setup
gitpan-cpan-version:      0.03
gitpan-cpan-path:         SHARYANTO/Task-Setup-0.03.tar.gz
gitpan-cpan-author:       SHARYANTO
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -1,8 +1,8 @@
 NAME
-    Task::Perinci - Install all Setup modules
+    Task::Setup - Install all Setup modules
 
 VERSION
-    version 0.02
+    version 0.03
 
 DESCRIPTION
     This task will install all Setup modules.
